fix(course_and_teacher_report): text align conflicts between inner and outer tables fixed

--- a/style/course_and_teacher_report.css
+++ b/style/course_and_teacher_report.css
@@ -21,8 +21,12 @@
     align-items: center;
 }
 
-.table th {
+#tableFinalgradesReport th {
     text-align: center;
+}
+/* The inner table, students table should have text align to left*/
+#tableFinalgradesReport table th {
+    text-align: left;
 }
 .count_items {
     margin-top: 2%;
